--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,4 +1,4 @@
-singularity: "library://ncherric/iliad/igdp-container:latest"
+singularity: "library://ncherric/iliad/igdp-container:v1.16"
 
 include: "rules/common.smk"
 splits=config['NYGC']['numberOfSplitRegionsFiles']
